# meta-scaler

./: .env  .env.example  .gitignore  CHECKLIST.md  CODE_QUALITY_IMPROVEMENTS.md  COMPETITION_CHECKLIST.md  CRITICAL_FIXES.md  DELIVERY_SUMMARY.md  DELIVERY_SUMMARY_FINETUNING.md  DEPLOYMENT_COMPLETE.md  Dockerfile  FINETUNING_CHECKLIST.md  FINETUNING_COMPLETE.md  FINETUNING_GUIDE.md  GETTING_STARTED.md  GRADER_IMPROVEMENTS.md  INDEX.md  INDEX_FINETUNING.md  NEXT_STEPS.md  PROJECT_OVERVIEW.md  PROJECT_STRUCTURE.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  README_SPACES.md  STRICTER_GRADERS_COMPLETE.md  SUBMISSION_READY.md  app.py  check_env.py  check_variance.py  demo_strict_grading.py  deploy_to_hf.py  docker-compose.yml  evaluation.py  fine_tuning.py  finetune_examples.py  finetune_workflow.py  inference.py  main.py  openenv.yaml  (+25 more)
.github/workflows/: docker-test.yml
config/: openenv.yaml
data/: task_metadata.yaml  training_preference.jsonl  training_supervised.jsonl  trajectories.jsonl
server/: __init__.py  app.py
src/: __init__.py  environment.py  graders.py  graders_normalized.py  tasks.py
